--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     
     <!--Remixicons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
@@ -96,12 +97,12 @@
                         <img src="assets/img/python-logo-generic.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/r-project.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/sklearn.png" alt="image" class="about__skills-img">
-                        <img src="assets/img/pytorch.png" alt="image" class="about__skills-img">
                         <img src="assets/img/tensorflow.png" alt="image" class="about__skills-img">
                         <img src="assets/img/about-html.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/about-css.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/about-github.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/about-javascript.svg" alt="image" class="about__skills-img">
+                        <img src="assets/img/about-excel.svg" alt="image" class="about__skills-img">
                     </div>
                 </div>
             </div>
@@ -134,7 +135,7 @@
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
 
-                    <a href="https://wa.me/qr/3OOPVVJJLJ2FD1" class="footer__social-link">
+                    <a href="Wa.me/60183459710" class="footer__social-link">
                         <i class="ri-whatsapp-fill"></i>
                     </a>
 
