--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--Remixicons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
@@ -82,7 +83,7 @@
                     <div class="home__data grid">
                         <h1 class="home__name">Lai Jien Weng</h1>
 
-                        <h2 class="home__profession">Data Science Enthusiast</h2>
+                        <h2 class="home__profession">Applied Mathematics in Computing</h2>
 
                         <div class="home__social">
                             <a href="https://github.com/JienWeng" target="_blank" class="home__social-link">
@@ -95,6 +96,10 @@
 
                             <a href="https://medium.com/@jianrong-jr" target="_blank" class="home__social-link">
                                 <i class="ri-medium-fill"></i>
+                            </a>
+
+                            <a href="https://www.kaggle.com/lyhatt" target="_blank" class="home__social-link">
+                                <i class="ri-database-fill"></i>
                             </a>
                     </div>
                     <a href="assets/pdf/Resume.pdf" download="" class="home__button button">Download CV</a>
@@ -206,13 +211,13 @@
                 </article>
 
                 <article class="work__card">
-                    <a href="" target="_blank" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="https://github.com/JienWeng/SmartWatchCompanyAnalysis" target="_blank" class="work__link">
+                        <img src="assets/img/bellabeat.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Stay tune!</h2>
-                    <span class="work__subtitle">Stay tune!</span>
+                    <h2 class="work__title">Smart Watch Company Analysis (Data Analysis)</h2>
+                    <span class="work__subtitle">Data Analytics about Smart Watch Company Analysis with Actionable Insight.</span>
                 </article>
 
                 <article class="work__card">
@@ -346,7 +351,7 @@
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
 
-                    <a href="https://wa.me/qr/3OOPVVJJLJ2FD1" class="footer__social-link">
+                    <a href="Wa.me/60183459710" class="footer__social-link">
                         <i class="ri-whatsapp-fill"></i>
                     </a>
 
