--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--Remixicons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
@@ -78,53 +79,53 @@
                 </article>
 
                 <article class="work__card">
-                    <a href="" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="https://github.com/JienWeng/SmartWatchCompanyAnalysis" target="_blank" class="work__link">
+                        <img src="assets/img/bellabeat.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Creative Website</h2>
-                    <span class="work__subtitle">Website Design</span>
+                    <h2 class="work__title">Smart Watch Company Analysis (Data Analysis)</h2>
+                    <span class="work__subtitle">Data Analytics about Smart Watch Company Analysis with Actionable Insight.</span>
                 </article>
 
                 <article class="work__card">
-                    <a href="" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="" target="_blank" class="work__link">
+                        <img src="assets/img/work-2.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Creative Website</h2>
-                    <span class="work__subtitle">Website Design</span>
+                    <h2 class="work__title">Stay tune!</h2>
+                    <span class="work__subtitle">Stay tune!</span>
                 </article>
 
                 <article class="work__card">
-                    <a href="" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="" target="_blank" class="work__link">
+                        <img src="assets/img/work-2.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Creative Website</h2>
-                    <span class="work__subtitle">Website Design</span>
+                    <h2 class="work__title">Stay tune!</h2>
+                    <span class="work__subtitle">Stay tune!</span>
                 </article>
 
                 <article class="work__card">
-                    <a href="" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="" target="_blank" class="work__link">
+                        <img src="assets/img/work-2.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Creative Website</h2>
-                    <span class="work__subtitle">Website Design</span>
+                    <h2 class="work__title">Stay tune!</h2>
+                    <span class="work__subtitle">Stay tune!</span>
                 </article>
 
                 <article class="work__card">
-                    <a href="" class="work__link">
-                        <img src="assets/img/work-1.png" alt="image" class="work__img">
+                    <a href="" target="_blank" class="work__link">
+                        <img src="assets/img/work-2.png" alt="image" class="work__img">
                         <i class="ri-arrow-right-circle-line work__icon"></i>
                     </a>
 
-                    <h2 class="work__title">Creative Website</h2>
-                    <span class="work__subtitle">Website Design</span>
+                    <h2 class="work__title">Stay tune!</h2>
+                    <span class="work__subtitle">Stay tune!</span>
                 </article>
             </div>
         </section>
@@ -154,7 +155,7 @@
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
 
-                    <a href="https://wa.me/qr/3OOPVVJJLJ2FD1" class="footer__social-link">
+                    <a href="Wa.me/60183459710" class="footer__social-link">
                         <i class="ri-whatsapp-fill"></i>
                     </a>
 
