--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--Remixicons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
@@ -125,7 +126,7 @@
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
 
-                    <a href="https://wa.me/qr/3OOPVVJJLJ2FD1" class="footer__social-link">
+                    <a href="Wa.me/60183459710" class="footer__social-link">
                         <i class="ri-whatsapp-fill"></i>
                     </a>
 
